# plomolibs

./: .gitignore  README.md  plomodefs.h  plomotypes.h
fifo/: CMakeLists.txt  fifo.c  fifo.h  main.c
hourglass/: CMakeLists.txt  hourglass.c  hourglass.h  main.c
template/: template.c  template.h
